--- a/index.html
+++ b/index.html
@@ -5,11 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Salt.exe 🦠</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="https://cdn.jsdelivr.net/npm/js-confetti@latest/dist/js-confetti.browser.js" defer></script>
-    <script src="script.js" defer></script>
 </head>
 <body>
     <h1>Salt.exe 🦠</h1>
     <button id="downloadButton" onclick="downloadFile()" type="button" aria-label="Download salt.exe file">Download File</button>
+
+    <script src="https://cdn.jsdelivr.net/npm/js-confetti@latest/dist/js-confetti.browser.js" defer></script>
+    <script src="script.js" defer></script>
+
+    <footer>
+        <p>Created by for educational purposes only by MemeGamerlol.</p>
+    </footer>
 </body>
 </html>
