--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="script.js" defer></script>
 
     <footer>
-        <p>Created by for educational purposes only by MemeGamerlol.</p>
+        <p>For educational purposes only made by MemeGamerlol.</p>
     </footer>
 </body>
 </html>
